# ai-skills-manager

./: .coverage  .gitignore  Makefile  README.md  ai-skills.yaml  pyproject.toml
.agents/skills/implementition-plan-metadata/: .ai-skills-managed  SKILL.md
.agents/skills/test-code-coverage/: .ai-skills-managed  SKILL.md
.agents/skills/unittest-testplan/: .ai-skills-managed  SKILL.md
.agents/skills/unittest-testplan/templates/: usecases_list.md
.agents/skills/version-contol/: SKILL.md
.agents/skills/work-summary/: .ai-skills-managed  SKILL.md
.agents/skills/work-summary/templates/: summary.md.j2
.devcontainer/: devcontainer.json
.github/workflows/: pr.yml  publish.yml
docs/: config.md  install.md  run.md
script/: init.bash
src/: __init__.py  cli.py  config.py  core.py
src/adapters/: base.py  link_updater.py
src/ai_skills_manager/: cli.py  core.py  utils.py
src/ai_skills_manager/adapters/: __init__.py  base.py  link_updater.py
src/ai_skills_manager/commands/: new.py  sync.py
src/ai_skills_manager/discovery/: __init__.py  auto.py  base.py  flat.py  github.py
src/discovery/: __init__.py  base.py  directory.py
tests/: test_cli.py  test_config.py  test_core.py  test_utils.py
tests/test_adapters/: test_link_updater.py
tests/test_discovery/: test_auto.py  test_directory.py  test_flat.py  test_github.py
